--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,6 +56,8 @@ jobs:
         run: pipenv install selenium
       - name: Update
         run: pipenv run dev
+      - name: Generate JSON
+        run: pipenv run python renew.py
       - name: Commit and push if changed
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
